Progress on UK dashboard vignette

--- a/vignettes/uk-covid-public-data.Rmd
+++ b/vignettes/uk-covid-public-data.Rmd
@@ -17,8 +17,12 @@ This document is a vignette in the R package idd (infectious disease dynamics) w
 
 The UK Health Security Agency (UKHSA) provides access to public data about COVID 19. For any given day we can download the number of cases, hospitalizations and deaths. Deaths are reported on the dashboard in two different ways: people who die within 28 days of a positive test for COVID, regardless of the cause of death; and people who have COVID-19 mentioned on their death certificate. These data can be downloaded at the local authority level. 
 
+XX next edit the line below to read in deaths, hospitalizations and cases. XX
+
 ```{r, echo = FALSE}
-library(idd)
+dat <- load_uk_cov_data()
+dim(dat)
+names(dat)
 ```
 
 The introduction will go here. ANd then I can add a little more.
