figuring out clashes

--- a/vignettes/uk-covid-public-data.Rmd
+++ b/vignettes/uk-covid-public-data.Rmd
@@ -15,4 +15,6 @@ vignette: >
 library(idd)
 ```
 
-The introduction will go here. ANd then I can add a little more.
+The UK provides the We can load up the most recent UK data for four different variables.
+
+
