making sure machine uptodate

--- a/vignettes/covid_compartments.Rmd
+++ b/vignettes/covid_compartments.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Covid Compartmental Models"
+title: "XXX"
 author: "Steven Riley"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
@@ -11,6 +11,4 @@ vignette: >
 
 ## Introduction
 
-The second PCR-confirmed exported case of SARS-CoV-2 (as it would become known) was reported from Taiwan on 15th January 2021 in a traveller that returned from Wuhan, had already recovered from mild symptoms, and reported not having visited a market.
-
-
+Text goes here
